// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`apply diff — agents create from empty remote 1`] = `
"
Plan:

  agents:
  + agent triage

  settings:
  + settings triage

Summary: 2 create, 0 update, 0 noop, 0 drift"
`;

exports[`apply diff — agents noop when remote matches desired 1`] = `
"
Plan:

  agents:
  = agent triage

  settings:
  = settings triage

Summary: 0 create, 0 update, 2 noop, 0 drift"
`;

exports[`apply diff — agents update when name differs 1`] = `
"
Plan:

  agents:
  ~ agent triage (name)

  settings:
  = settings triage

Summary: 0 create, 1 update, 1 noop, 0 drift"
`;

exports[`apply diff — agents drift when remote has agent not in desired 1`] = `
"
Plan:

  agents:
  ? agent stale (drift — ignored in v1, not deleted)

Summary: 0 create, 0 update, 0 noop, 1 drift"
`;

exports[`apply diff — settings update on networkConfig change 1`] = `
"
Plan:

  agents:
  = agent triage

  settings:
  ~ settings triage (networkConfig)

Summary: 0 create, 1 update, 1 noop, 0 drift"
`;

exports[`apply diff — platforms create on empty remote 1`] = `
"
Plan:

  agents:
  + agent triage

  settings:
  + settings triage

  platforms:
  + platform triage/triage-telegram

Summary: 3 create, 0 update, 0 noop, 0 drift"
`;

exports[`apply diff — platforms update with willRestart when config changes 1`] = `
"
Plan:

  agents:
  = agent triage

  settings:
  = settings triage

  platforms:
  ~ platform triage/triage-telegram (config)
      ⚠ will restart platform — in-flight messages may drop

Summary: 0 create, 1 update, 2 noop, 0 drift"
`;

exports[`apply diff — memory schema creates entity + relationship types 1`] = `
"
Plan:

  entity-types:
  + entity-type company

  relationship-types:
  + relationship-type works_at

Summary: 2 create, 0 update, 0 noop, 0 drift"
`;

exports[`renderSummary renders zero-row plan 1`] = `"Summary: 0 create, 0 update, 0 noop, 0 drift"`;

exports[`apply diff — connectors render includes the connectors sections 1`] = `
"
Plan:

  connector-definitions:
  + connector-definition acme (from connectors/acme.connector.ts)

  auth-profiles:
  + auth-profile hn-token
  + auth-profile x-account
      ⚠ interactive auth — complete it via the connect URL printed after apply

  connections:
  + connection hn-frontpage

  feeds:
  + feed hn-frontpage/stories

Summary: 5 create, 0 update, 0 noop, 0 drift"
`;
